--- a/Maps/nbproject/project.properties
+++ b/Maps/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.gson-2.2.4.jar=gson-2.2.4.jar
 file.reference.postgresql-9.3-1101.jdbc3.jar=postgresql-9.3-1101.jdbc3.jar
 includes=**
 j2ee.compile.on.save=true
@@ -44,7 +45,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-9.3-1101.jdbc3.jar}
+    ${file.reference.postgresql-9.3-1101.jdbc3.jar}:\
+    ${file.reference.gson-2.2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
