--- a/Maps/nbproject/project.properties
+++ b/Maps/nbproject/project.properties
@@ -58,7 +58,9 @@ javac.classpath=\
     ${file.reference.quartz-2.2.1.jar}:\
     ${file.reference.quartz-jobs-2.2.1.jar}:\
     ${file.reference.slf4j-api-1.6.6.jar}:\
-    ${file.reference.slf4j-log4j12-1.6.6.jar}
+    ${file.reference.slf4j-log4j12-1.6.6.jar}:\
+    ${libs.restapi.classpath}:\
+    ${libs.restlib.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -88,6 +90,7 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
