Creo que se crea el servidor

--- a/Maps/web/WEB-INF/web.xml
+++ b/Maps/web/WEB-INF/web.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    <listener>
+        <listener-class>com.sun.xml.ws.transport.http.servlet.WSServletContextListener</listener-class>
+    </listener>
     <servlet>
         <servlet-name>controlador</servlet-name>
         <servlet-class>Controladores.Controlador</servlet-class>
@@ -12,6 +15,11 @@
         <servlet-name>control</servlet-name>
         <servlet-class>Controladores.control</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Servicio</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
     <servlet-mapping>
         <servlet-name>controlador</servlet-name>
         <url-pattern>/controlador</url-pattern>
@@ -23,5 +31,9 @@
     <servlet-mapping>
         <servlet-name>control</servlet-name>
         <url-pattern>/control</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Servicio</servlet-name>
+        <url-pattern>/Servicio</url-pattern>
     </servlet-mapping>
 </web-app>
