--- a/Maps/nbproject/project.properties
+++ b/Maps/nbproject/project.properties
@@ -61,7 +61,8 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.6.6.jar}:\
     ${file.reference.slf4j-log4j12-1.6.6.jar}:\
     ${libs.restapi.classpath}:\
-    ${libs.restlib.classpath}
+    ${libs.restlib.classpath}:\
+    ${libs.metro.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
