--- a/Maps/nbproject/genfiles.properties
+++ b/Maps/nbproject/genfiles.properties
@@ -9,3 +9,4 @@ nbproject/build-impl.xml.stylesheet.CRC32=d659eb7a@1.65.1.1
 nbproject/rest-build.xml.data.CRC32=f0d263a2
 nbproject/rest-build.xml.script.CRC32=fa4f0335
 nbproject/rest-build.xml.stylesheet.CRC32=0cfeebcc@1.24.1
+nbproject/jaxws-build.xml.stylesheet.CRC32=6608c2cf
