--- a/Maps/nbproject/project.properties
+++ b/Maps/nbproject/project.properties
@@ -35,15 +35,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.c3p0-0.9.1.1.jar=quartz-2.2.1/lib/c3p0-0.9.1.1.jar
 file.reference.gson-2.2.4.jar=gson-2.2.4.jar
-file.reference.json-simple-1.1.1.jar=json-simple-1.1.1.jar
-file.reference.log4j-1.2.16.jar=quartz-2.2.1/lib/log4j-1.2.16.jar
 file.reference.postgresql-9.3-1101.jdbc3.jar=postgresql-9.3-1101.jdbc3.jar
-file.reference.quartz-2.2.1.jar=quartz-2.2.1/lib/quartz-2.2.1.jar
-file.reference.quartz-jobs-2.2.1.jar=quartz-2.2.1/lib/quartz-jobs-2.2.1.jar
-file.reference.slf4j-api-1.6.6.jar=quartz-2.2.1/lib/slf4j-api-1.6.6.jar
-file.reference.slf4j-log4j12-1.6.6.jar=quartz-2.2.1/lib/slf4j-log4j12-1.6.6.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -55,16 +48,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-9.3-1101.jdbc3.jar}:\
     ${file.reference.gson-2.2.4.jar}:\
-    ${file.reference.c3p0-0.9.1.1.jar}:\
-    ${file.reference.log4j-1.2.16.jar}:\
-    ${file.reference.quartz-2.2.1.jar}:\
-    ${file.reference.quartz-jobs-2.2.1.jar}:\
-    ${file.reference.slf4j-api-1.6.6.jar}:\
-    ${file.reference.slf4j-log4j12-1.6.6.jar}:\
     ${libs.restapi.classpath}:\
     ${libs.restlib.classpath}:\
-    ${libs.metro.classpath}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${libs.metro.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
